stylesheets/default.css
/* ... */
header div.intro a.animated i {display:block;font-size:4vw;}
header div.intro a.animated:hover i {color:white;}
header div.intro a.animated span {color:#FAC200;font-size:1.2em;font-family:Georgia, "Times New Roman", Times, serif;}
header div.intro a.animated span strong {display:block;font-size:3em;margin-top:-0.5em;}
header div.intro a.animated:hover span, header div.intro a.animated:hover span strong {color:white;}

#bio {padding:5%;}
#bio p.intro, #recent-work p, #stats p {font-size:28px;line-height:44px;width:60%;font-style:italic;text-align:center;margin:0 auto;border-top:3px solid black;padding-top:2em;margin-bottom:2em;max-width:740px;}
#bio p.intro strong, #bio p a {font-family:"Fjalla One", sans-serif;font-weight:400;font-style:normal;text-transform:uppercase;}
#bio div {-webkit-column-count:2;-moz-column-count:2;column-count:2;width:60%;margin:0 auto;max-width:740px;}
#bio h2, #bio h3 {color:black;}
#bio h3 {border-bottom:1px solid black;-}
#bio p a {font-size:16px;}

#recent-work {background:url(../images/desk-angle.jpg) center top;background-attachment:fixed;background-size:cover;color:white;position:relative;float:left;width:100%;height:auto;text-align:center;}
#recent-work h2 {border-color:white;}
#recent-work h2 a {font-family:Georgia, "Times New Roman", Times, serif;text-transform:lowercase;font-style:italic;background-color:#FAC200;color:black;}
#recent-work h2 a:hover {color:white;}
#recent-work h2, #recent-work h3, #recent-work a {color:white;}
#recent-work p, #stats p {padding:0;border:none;clear:both;line-height:1.2em;margin-bottom:0;}
#recent-work img {margin:4em 0;width:20%;height:auto;}
#recent-work img:hover {opacity:0.6;}

#work {background-color:#F3F2EE;}
#work h2 {margin-bottom:2em;}
#work ul {max-width:1400px;margin:0 auto;}
#work li {display:inline;float:left;width:30%;background-color:white;border-top:solid 3px #FAC200;flex:1;margin-bottom:5em;}
#work li:nth-child(2){margin-left:5%;margin-right:5%;}
#work li h4 {padding:1em;padding-bottom:0.4em;}
#work h4 {padding-bottom:0;}
#work li a figure {position:relative;}
#work li a figure img {width:100%;height:auto;-webkit-filter: grayscale(1); -webkit-filter: grayscale(100%);filter: gray; filter: grayscale(100%);filter: url(desaturate.svg#greyscale);border-bottom:solid 3px black;}
#work li a figure figcaption {opacity:0;margin-top:-5em;position:absolute;padding:1em;font-family:Georgia, "Times New Roman", Times, serif;font-style:italic;text-align:center;background-color:black;color:white;width:100%;}
#work li a:hover, #work li a:focus {color:white;}
#work li a:hover figure img, #work li a:focus figure img {-webkit-filter:none;-webkit-filter:none;filter:none;filter:none;filter:none;opacity:0;}
#work li a figure img.replace {position:absolute;top:0;left:0em;opacity:0;-webkit-filter: blur(3px);filter:blur(3px);}
#work li a:hover figure img.replace, #work li a:focus figure img.replace {opacity:1;-webkit-filter:none;filter:none;}
#work li a:hover figure figcaption, #work li a:focus figure figcaption {margin-top:-0.1em;opacity:1;}

#stats {background-color:#FAC200;}
#stats li {width:25%;display:inline;float:left;text-align:center;font-size:1.2em;color:#BE8900;font-family:"Fjalla One", sans-serif;font-weight:normal;}
#stats li strong {font-weight:normal;color:black;}
#stats li i {width:50%;height:auto;display:block;margin:0 auto 0.3em auto;font-size:6em;text-align:center;float:left;width:100%;}
#stats li big {display:block;font-size:6em;color:black;}
#stats li small {font-size:1em;margin-top:-1em;float:left;width:100%;letter-spacing:0.4em;}
#stats li:hover {margin-top:-2em;}
#stats li:hover i {font-size:7em;color:black;}
#stats p {margin:2em auto;}

#personal {background-color:#272727;padding:5%;color:white;}
#personal h2 {color:white;border-color:white;margin-bottom:5%;}
#personal li {display:inline;float:left;width:20%;height:50%;background-position:center center;background-repeat:no-repeat;background-size:cover;overflow:hidden;}
#personal li a {float:left;background-color:#333;background-color:rgba(30, 30, 30, 0.7);width:100%;height:18vw;color:white;text-align:center;padding:5%;display:block;background-repeat:no-repeat;background-position:center center;background-size:1%;-webkit-filter: grayscale(1); -webkit-filter: grayscale(100%);filter: gray; filter: grayscale(100%);filter: url(desaturate.svg#greyscale);}
#personal li:nth-child(even) a {background-color:#666;background-color:rgba(60, 60, 60, 0.7);}
#personal li a strong {display:block;font-size:2em;font-family:Georgia, "Times New Roman", Times, serif;font-weight:normal;font-style:italic;margin-top:40%;}
#personal li a hr {width:10%;margin:0.5em auto 2em auto;border:none;border-top:2px solid #FAC200;}
#personal li a small {opacity:0;font-size:1.2em;}
#personal li a small img {display:block;opacity:0;margin:0 aut;}
#personal li a:hover, #personal li a:focus {background-size:100%;-webkit-filter:none;-webkit-filter:none;filter:none;filter:none;filter:none;}
#personal li a:hover strong, #personal li a:focus strong {margin-top:20%;}
#personal li a:hover hr, #personal li a:focus hr {width:50%;}
#personal li a:hover small, #personal li a:focus small {opacity:1;margin:0;}
#personal li a:hover small img {opacity:1;}

#personal li.drums a {background-image:url(../images/softwares-techniques/drums.png);}
#personal li.soccer a {background-image:url(../images/softwares-techniques/soccer.png);}
#personal li.chocolate a {background-image:url(../images/softwares-techniques/chocolate.png);}
#personal li.philz-coffee a {background-image:url(../images/softwares-techniques/philz-coffee.png);}
#personal li.italy a {background-image:url(../images/softwares-techniques/italy.png);}

#personal li.evernote a {background-image:url(../images/softwares-techniques/evernote.png);}
#personal li.pomodoro a {background-image:url(../images/softwares-techniques/pomodoro.png);}
#personal li.terminal a {background-image:url(../images/softwares-techniques/terminal.png);}
/* ... */

